@@ -11,4 +11,5 @@
 Pour le projet, on prends 90% des cartes de la grille, que l'on divise en cartes bleues et rouge, on ajoute une carte noire et le reste seront des cartes blanches.
 
  
-## Installation
+## Exécution
+```java --module-path ${JAVAFX_HOME}/lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.web -jar app.jar```  
